testsuite/tests/properties/invalid_new/extra_field.lkt
import common

class BarNode: FooNode {
    fun prop(): MyStruct = MyStruct(a=12, b=15, c=19)
}
